feat: add semantic search
